--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,27 +1,52 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
+/*
+<weight>: Use a value from 100 to 900
+<uniquifier>: Use a unique and descriptive class name
+
+.inter-<uniquifier> {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+*/
+
 :root {
-    --text: #1D232C;
-    --bg: #F5F5F5;
+    --a: #DAEE68;
+    --b: #85D9F8;
+    --c: #87E88C;
+    --d: #B7FBC9;
+    --text: #010101;
+    --bg: #D9D9D9;
+    --section: #ffffff;
 
 }
 
 .dark {
-    --text: #F5F5F5;
-    --bg: #1D232C;
+    --text: #ffffff;
+    --bg: #010101;
+    --section: #ffffff;
 }
 
 * {
-    @apply font-sans box-border
+    font-family: "Inter", sans-serif;
+    box-sizing: border-box;
 }
+
 
 #root {
     @apply w-screen h-screen bg-(--bg)
 }
 
-nav,
+nav {
+    @apply rounded-xl bg-linear-to-r from-(--b) to-(--a)
+}
+
 .content {
-    @apply border-2 rounded-2xl
+    @apply rounded-xl bg-(--section)
 }
 
 nav a {
